syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
package ru.tinkoff.lections.sender.resource.grpc;

message GetMessageRequest {
  int64 id = 1;
}

message GetMessageResponse {
  Message message = 1;
}

message Message {
  int64 id = 1;
  string author = 2;
  string content = 3;
  google.protobuf.Timestamp timestamp = 4;
}

service SenderService {
  rpc getMessage(GetMessageRequest) returns (GetMessageResponse);
}